
2.3.15 (2016-09-14)
------------------

Enhancements
 - [web] don't allow a recurrence rule to end before the first occurrence

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [eas] properly generate yearly rrule
 - [core] strip protocol value from proxyAddresses attribute (#3182)
 - [web] handle binary content transfer encoding when displaying mails

2.3.14 (2016-08-17)
-------------------

New features
 - [eas] added folder merging capabilities

Enhancements
 - [web] expunge drafts mailbox when a draft is sent and deleted
 - [web] style cancelled events in Calendar module (#2800)
 - [web] updated CKEditor to version 4.5.10

Bug fixes
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)
 - [web] improved extraction of HTML signature in Preferences module
 - [web] really delete mailboxes being deleted from the Trash folder (#595, #1189, #641)
 - [core] fixing sogo-tool backup with multi-domain configuration but domain-less logins
 - [core] during event scheduling, use 409 instead of 403 so Lightning doesn't fail silently
 - [core] correctly calculate recurrence exceptions when not overlapping the recurrence id
 - [core] prevent invalid SENT-BY handling during event invitations (#3759)

2.3.13 (2016-07-06)
-------------------

New features
 - [core] now possible to set default Sieve script (#2949)
 - [core] new sogo-tool truncate-calendar feature (#1513, #3141)
 - [eas] initial Out-of-Office support in EAS

Enhancements
 - [core] avoid showing bundle loading info when not needed (#3726)
 - [core] when restoring data using sogo-tool, regenerate Sieve script (#3029)
 - [eas] use the preferred email identity in EAS if valid (#3698)
 - [eas] handle inline attachments during EAS content generation
 - [web] update jQuery File Upload library to 9.12.5

Bug fixes
 - [web] fixed crash when an attachment filename has no extension